# intel-8080-emu

./: Cargo.toml  README.md
src/: alu.rs  arguments.rs  cp_m.rs  cpu.rs  debug_menu.rs  main.rs  registers.rs
src/cpu/: alu.rs  instruction.rs  memory.rs  registers.rs  utils.rs
src/debug_menu/: cpu_output.rs  registers_view.rs
