[package]
name = "intel-8080-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "i8080"
path = "src/lib.rs"

[[bin]]
name = "intel-8080-emu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
glium = { version = "0.35.0", default-features = true }
imgui = { version = "0.12.0", features = [
	"tables-api",
] }
imgui-glium-renderer = "0.13.0"
imgui-winit-support = "0.13.0"
rand = "0.8.5"
strum = { version = "0.27.1", features = ["strum_macros"] }
strum_macros = "0.27.1"
